@@ -12,7 +12,9 @@ enum umwsu_status {
   UMWSU_UNKNOWN_FILE_TYPE,
   UMWSU_EINVAL,
   UMWSU_IERROR,
+  UMWSU_UNDECIDED,
   UMWSU_SUSPICIOUS,
+  UMWSU_WHITE_LISTED,
   UMWSU_MALWARE,
 };
 
